--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -24,8 +25,9 @@
         <div class="button-container">
             <a class="aurora-glow-button1" href="upload_file.html" style="text-decoration: none">Upload the File</a>
             <a class="aurora-glow-button2" href="#" style="text-decoration: none">Paste the Code</a>
-            <a class="aurora-glow-button3" href="#" style="text-decoration: none">Link the Github Repo</a>
+            <button class="aurora-glow-button3" href="#" style="text-decoration: none" onclick="displayInputField()">Link the Github Repo</button>
         </div>
+        <input type="text" class="input-field" placeholder="github.com/..." />
       </div>
 </body>
 </html>
