--- a/MVP/public/FrontPage.html
+++ b/MVP/public/FrontPage.html
@@ -66,7 +66,7 @@
         <input
           type="text"
           class="input-field"
-          placeholder="https://github.com/..."
+          placeholder="https://github.com/username/repository.git"
           spellcheck="false"
         />
         <button id="view-stats-button">View Stats</button>
